# codesmith_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/codesmith_ai/: crew.py  main.py  schemas.py
src/codesmith_ai/config/: agents.yaml  tasks.yaml
