[project]
name = "codesmith_ai"
version = "0.1.0"
description = "CodeSmith-AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
codesmith_ai = "codesmith_ai.main:run"
run_crew = "codesmith_ai.main:run"
train = "codesmith_ai.main:train"
replay = "codesmith_ai.main:replay"
test = "codesmith_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
